Update authentication, add refresh token, token api